projects/compiler/test/typechecker/accessor/error_unknown_field_fn.out
Error at %FILE_NAME%:3:6
Unknown field 'foo'
  |  noop.foo
          ^
Functions don't have any fields or methods
